--- a/index.html
+++ b/index.html
@@ -47,25 +47,54 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">SQ</td>
     
-<td class="col-md-3">2.64</td>
+<td class="col-md-3">2.65</td>
   
 
-<td class="col-md-4">4.51</td>
+<td class="col-md-4">4.52</td>
   
 
-<td class="col-md-5">5.17</td>
+<td class="col-md-5">5.19</td>
   
 
-<td class="col-md-6">2.39</td>
+<td class="col-md-6">2.41</td>
   
 
-<td class="col-md-7">0.87</td>
+<td class="col-md-7">0.88</td>
   
 
-<td class="col-md-8">1.38</td>
+<td class="col-md-8">1.50</td>
   
 
-<td class="col-md-9">1.71</td>
+<td class="col-md-9">1.57</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">AAPL</td>
+    
+<td class="col-md-3">1.19</td>
+  
+
+<td class="col-md-4">2.16</td>
+  
+
+<td class="col-md-5">1.46</td>
+  
+
+<td class="col-md-6">0.64</td>
+  
+
+<td class="col-md-7">1.29</td>
+  
+
+<td class="col-md-8">1.10</td>
+  
+
+<td class="col-md-9">0.67</td>
   
 s
 </tr>
