--- a/index.html
+++ b/index.html
@@ -50,22 +50,51 @@
 <td class="col-md-3">2.68</td>
   
 
-<td class="col-md-4">4.53</td>
+<td class="col-md-4">4.54</td>
   
 
-<td class="col-md-5">5.21</td>
+<td class="col-md-5">5.09</td>
   
 
-<td class="col-md-6">2.29</td>
+<td class="col-md-6">2.34</td>
   
 
-<td class="col-md-7">0.86</td>
+<td class="col-md-7">0.83</td>
   
 
-<td class="col-md-8">1.48</td>
+<td class="col-md-8">1.60</td>
   
 
 <td class="col-md-9">0.80</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">QQQ</td>
+    
+<td class="col-md-3">2.21</td>
+  
+
+<td class="col-md-4">3.30</td>
+  
+
+<td class="col-md-5">1.38</td>
+  
+
+<td class="col-md-6">0.54</td>
+  
+
+<td class="col-md-7">0.82</td>
+  
+
+<td class="col-md-8">1.00</td>
+  
+
+<td class="col-md-9">0.67</td>
   
 s
 </tr>
