--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
 <td class="col-md-3">2.21</td>
   
 
-<td class="col-md-4">3.22</td>
+<td class="col-md-4">3.21</td>
   
 
 <td class="col-md-5">1.31</td>
   
 
-<td class="col-md-6">0.51</td>
+<td class="col-md-6">0.50</td>
   
 
-<td class="col-md-7">0.65</td>
+<td class="col-md-7">0.69</td>
   
 
-<td class="col-md-8">1.10</td>
+<td class="col-md-8">1.20</td>
   
 
 <td class="col-md-9">0.67</td>
@@ -82,19 +82,48 @@ s
 <td class="col-md-4">4.55</td>
   
 
-<td class="col-md-5">5.04</td>
+<td class="col-md-5">5.15</td>
   
 
-<td class="col-md-6">1.66</td>
+<td class="col-md-6">1.63</td>
   
 
-<td class="col-md-7">1.03</td>
+<td class="col-md-7">1.01</td>
   
 
-<td class="col-md-8">0.86</td>
+<td class="col-md-8">0.80</td>
   
 
-<td class="col-md-9">1.40</td>
+<td class="col-md-9">1.20</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">3</td>
+    <td class="col-md-2">MU</td>
+    
+<td class="col-md-3">2.65</td>
+  
+
+<td class="col-md-4">2.66</td>
+  
+
+<td class="col-md-5">1.10</td>
+  
+
+<td class="col-md-6">1.20</td>
+  
+
+<td class="col-md-7">0.00</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
