--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
 <td class="col-md-4">3.16</td>
   
 
-<td class="col-md-5">1.29</td>
+<td class="col-md-5">1.30</td>
   
 
 <td class="col-md-6">0.50</td>
   
 
-<td class="col-md-7">0.81</td>
+<td class="col-md-7">0.77</td>
   
 
 <td class="col-md-8">0.92</td>
   
 
-<td class="col-md-9">1.33</td>
+<td class="col-md-9">0.75</td>
   
 s
 </tr>
@@ -74,27 +74,27 @@ s
 
 <tr>
     <td class="col-md-1">2</td>
-    <td class="col-md-2">SQ</td>
+    <td class="col-md-2">AAPL</td>
     
-<td class="col-md-3">2.76</td>
+<td class="col-md-3">1.19</td>
   
 
-<td class="col-md-4">4.57</td>
+<td class="col-md-4">2.01</td>
   
 
-<td class="col-md-5">5.17</td>
+<td class="col-md-5">1.61</td>
   
 
-<td class="col-md-6">1.48</td>
+<td class="col-md-6">0.55</td>
   
 
-<td class="col-md-7">1.03</td>
+<td class="col-md-7">1.05</td>
   
 
-<td class="col-md-8">0.65</td>
+<td class="col-md-8">0.56</td>
   
 
-<td class="col-md-9">0.25</td>
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
