--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">QQQ</td>
+    
+<td class="col-md-3">2.25</td>
+  
+
+<td class="col-md-4">2.99</td>
+  
+
+<td class="col-md-5">1.07</td>
+  
+
+<td class="col-md-6">0.59</td>
+  
+
+<td class="col-md-7">1.17</td>
+  
+
+<td class="col-md-8">1.25</td>
+  
+
+<td class="col-md-9">1.67</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
