--- a/index.html
+++ b/index.html
@@ -50,22 +50,51 @@
 <td class="col-md-3">2.25</td>
   
 
-<td class="col-md-4">2.99</td>
+<td class="col-md-4">2.96</td>
   
 
-<td class="col-md-5">1.07</td>
+<td class="col-md-5">1.05</td>
   
 
-<td class="col-md-6">0.58</td>
+<td class="col-md-6">0.57</td>
   
 
-<td class="col-md-7">1.20</td>
+<td class="col-md-7">1.35</td>
   
 
-<td class="col-md-8">1.18</td>
+<td class="col-md-8">1.24</td>
   
 
-<td class="col-md-9">1.25</td>
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">TWTR</td>
+    
+<td class="col-md-3">0.95</td>
+  
+
+<td class="col-md-4">3.66</td>
+  
+
+<td class="col-md-5">1.02</td>
+  
+
+<td class="col-md-6">0.94</td>
+  
+
+<td class="col-md-7">0.71</td>
+  
+
+<td class="col-md-8">1.00</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
