--- a/index.html
+++ b/index.html
@@ -47,25 +47,54 @@
     <td class="col-md-1">1</td>
     <td class="col-md-2">QQQ</td>
     
-<td class="col-md-3">2.25</td>
+<td class="col-md-3">2.26</td>
   
 
-<td class="col-md-4">2.95</td>
+<td class="col-md-4">2.96</td>
   
 
-<td class="col-md-5">1.04</td>
+<td class="col-md-5">1.01</td>
   
 
-<td class="col-md-6">0.57</td>
+<td class="col-md-6">0.59</td>
   
 
-<td class="col-md-7">1.30</td>
+<td class="col-md-7">1.42</td>
   
 
-<td class="col-md-8">1.06</td>
+<td class="col-md-8">1.00</td>
   
 
-<td class="col-md-9">0.60</td>
+<td class="col-md-9">0.80</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">AAPL</td>
+    
+<td class="col-md-3">1.17</td>
+  
+
+<td class="col-md-4">1.88</td>
+  
+
+<td class="col-md-5">1.08</td>
+  
+
+<td class="col-md-6">0.88</td>
+  
+
+<td class="col-md-7">0.96</td>
+  
+
+<td class="col-md-8">0.89</td>
+  
+
+<td class="col-md-9">0.50</td>
   
 s
 </tr>
