--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">AAPL</td>
+    
+<td class="col-md-3">1.17</td>
+  
+
+<td class="col-md-4">1.84</td>
+  
+
+<td class="col-md-5">1.08</td>
+  
+
+<td class="col-md-6">0.81</td>
+  
+
+<td class="col-md-7">1.14</td>
+  
+
+<td class="col-md-8">1.22</td>
+  
+
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
