--- a/index.html
+++ b/index.html
@@ -53,19 +53,48 @@
 <td class="col-md-4">1.84</td>
   
 
-<td class="col-md-5">1.08</td>
+<td class="col-md-5">1.03</td>
   
 
-<td class="col-md-6">0.81</td>
+<td class="col-md-6">0.87</td>
   
 
-<td class="col-md-7">1.14</td>
+<td class="col-md-7">1.09</td>
   
 
-<td class="col-md-8">1.22</td>
+<td class="col-md-8">1.50</td>
   
 
-<td class="col-md-9">0.67</td>
+<td class="col-md-9">0.50</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">SQ</td>
+    
+<td class="col-md-3">2.88</td>
+  
+
+<td class="col-md-4">4.50</td>
+  
+
+<td class="col-md-5">5.04</td>
+  
+
+<td class="col-md-6">0.69</td>
+  
+
+<td class="col-md-7">0.53</td>
+  
+
+<td class="col-md-8">0.85</td>
+  
+
+<td class="col-md-9">1.00</td>
   
 s
 </tr>
