--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">SQ</td>
+    
+<td class="col-md-3">2.91</td>
+  
+
+<td class="col-md-4">4.40</td>
+  
+
+<td class="col-md-5">3.95</td>
+  
+
+<td class="col-md-6">0.65</td>
+  
+
+<td class="col-md-7">0.61</td>
+  
+
+<td class="col-md-8">1.50</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
