--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TWTR</td>
+    
+<td class="col-md-3">0.94</td>
+  
+
+<td class="col-md-4">3.51</td>
+  
+
+<td class="col-md-5">1.14</td>
+  
+
+<td class="col-md-6">0.62</td>
+  
+
+<td class="col-md-7">1.50</td>
+  
+
+<td class="col-md-8">2.33</td>
+  
+
+<td class="col-md-9">0.20</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
