--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">SQ</td>
+    
+<td class="col-md-3">2.96</td>
+  
+
+<td class="col-md-4">4.33</td>
+  
+
+<td class="col-md-5">2.03</td>
+  
+
+<td class="col-md-6">0.46</td>
+  
+
+<td class="col-md-7">0.72</td>
+  
+
+<td class="col-md-8">1.12</td>
+  
+
+<td class="col-md-9">0.50</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
