--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">SQ</td>
+    
+<td class="col-md-3">2.99</td>
+  
+
+<td class="col-md-4">4.17</td>
+  
+
+<td class="col-md-5">1.61</td>
+  
+
+<td class="col-md-6">0.45</td>
+  
+
+<td class="col-md-7">0.75</td>
+  
+
+<td class="col-md-8">1.83</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
