--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">SQ</td>
+    
+<td class="col-md-3">3.02</td>
+  
+
+<td class="col-md-4">4.13</td>
+  
+
+<td class="col-md-5">1.43</td>
+  
+
+<td class="col-md-6">0.50</td>
+  
+
+<td class="col-md-7">0.69</td>
+  
+
+<td class="col-md-8">1.22</td>
+  
+
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
