--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">SQ</td>
+    
+<td class="col-md-3">3.09</td>
+  
+
+<td class="col-md-4">3.89</td>
+  
+
+<td class="col-md-5">1.07</td>
+  
+
+<td class="col-md-6">0.52</td>
+  
+
+<td class="col-md-7">1.26</td>
+  
+
+<td class="col-md-8">0.69</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
