--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">1.02</td>
+  
+
+<td class="col-md-4">1.62</td>
+  
+
+<td class="col-md-5">1.00</td>
+  
+
+<td class="col-md-6">1.49</td>
+  
+
+<td class="col-md-7">0.68</td>
+  
+
+<td class="col-md-8">1.55</td>
+  
+
+<td class="col-md-9">2.00</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
