--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TLRY</td>
+    
+<td class="col-md-3">0.89</td>
+  
+
+<td class="col-md-4">1.69</td>
+  
+
+<td class="col-md-5">1.13</td>
+  
+
+<td class="col-md-6">1.92</td>
+  
+
+<td class="col-md-7">1.30</td>
+  
+
+<td class="col-md-8">1.75</td>
+  
+
+<td class="col-md-9">0.67</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
