--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">1.00</td>
+  
+
+<td class="col-md-4">1.44</td>
+  
+
+<td class="col-md-5">1.00</td>
+  
+
+<td class="col-md-6">0.78</td>
+  
+
+<td class="col-md-7">0.86</td>
+  
+
+<td class="col-md-8">1.13</td>
+  
+
+<td class="col-md-9">1.00</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
