--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">0.99</td>
+  
+
+<td class="col-md-4">1.34</td>
+  
+
+<td class="col-md-5">1.08</td>
+  
+
+<td class="col-md-6">0.72</td>
+  
+
+<td class="col-md-7">1.16</td>
+  
+
+<td class="col-md-8">0.94</td>
+  
+
+<td class="col-md-9">0.75</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
