--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
             </thead>
             <tbody>
               
+<tr>
+    <td class="col-md-1">1</td>
+    <td class="col-md-2">TSLA</td>
+    
+<td class="col-md-3">0.99</td>
+  
+
+<td class="col-md-4">1.31</td>
+  
+
+<td class="col-md-5">1.13</td>
+  
+
+<td class="col-md-6">0.74</td>
+  
+
+<td class="col-md-7">1.20</td>
+  
+
+<td class="col-md-8">1.18</td>
+  
+
+<td class="col-md-9">0.33</td>
+  
+s
+</tr>
+
+  
+
             </tbody>
         </table>
     </div>
