--- a/index.html
+++ b/index.html
@@ -53,19 +53,48 @@
 <td class="col-md-4">1.31</td>
   
 
-<td class="col-md-5">1.16</td>
+<td class="col-md-5">1.14</td>
   
 
-<td class="col-md-6">0.75</td>
+<td class="col-md-6">0.77</td>
   
 
-<td class="col-md-7">1.46</td>
+<td class="col-md-7">1.40</td>
   
 
 <td class="col-md-8">0.90</td>
   
 
-<td class="col-md-9">1.50</td>
+<td class="col-md-9">0.80</td>
+  
+s
+</tr>
+
+  
+
+<tr>
+    <td class="col-md-1">2</td>
+    <td class="col-md-2">MU</td>
+    
+<td class="col-md-3">2.66</td>
+  
+
+<td class="col-md-4">1.80</td>
+  
+
+<td class="col-md-5">2.56</td>
+  
+
+<td class="col-md-6">0.77</td>
+  
+
+<td class="col-md-7">0.00</td>
+  
+
+<td class="col-md-8">0.00</td>
+  
+
+<td class="col-md-9">0.33</td>
   
 s
 </tr>
