--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ SOFTWARE.
 <ul>
 <li><a href="blog/faster-database-testing.html">Faster Database Testing with <code>tmp-postgres</code></a></li>
 <li><a href="blog/development-notes-12-25-19.html">Development Notes: Decemember 25th 2019</a></li>
-<li>[Development Notes: Decemember 26th 2019] (blog/development-notes-12-26-19.html)</li>
+<li><a href="blog/development-notes-12-26-19.html">Development Notes: Decemember 26th 2019</a></li>
 </ul>
 <p><img src="./images/twitter.png" width="20" height="20" alt="twitter" /> <a href="https://twitter.com/jfischoff">jfischoff</a> <img src="./images/github.png" width="20" height="20" alt="github" /> <a href="https://github.com/jfischoff">jfischoff</a></p>
 </article>
