--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ SOFTWARE.
 </header>
 <h1 id="blog-entries">Blog Entries</h1>
 <ul>
+<li><a href="blog/development-notes-12-31-19.html">Development Notes: Decemember 31th 2019</a></li>
 <li><a href="blog/development-notes-12-30-19.html">Development Notes: Decemember 30th 2019</a></li>
 <li><a href="blog/development-notes-12-29-19.html">Development Notes: Decemember 29th 2019</a></li>
 <li><a href="blog/development-notes-12-28-19.html">Development Notes: Decemember 28th 2019</a></li>
