--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ SOFTWARE.
 <h1 id="blog-entries">Blog Entries</h1>
 <ul>
 <li><a href="blog/development-notes-01-01-20.html">Development Notes: January 1st 2020</a></li>
+<li><a href="blog/development-notes-01-01-20.html">Development Notes: January 1st 2020</a></li>
 <li><a href="blog/development-notes-12-31-19.html">Development Notes: Decemember 31th 2019</a></li>
 <li><a href="blog/development-notes-12-30-19.html">Development Notes: Decemember 30th 2019</a></li>
 <li><a href="blog/development-notes-12-29-19.html">Development Notes: Decemember 29th 2019</a></li>
