--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@ SOFTWARE.
 </header>
 <h1 id="blog-entries">Blog Entries</h1>
 <ul>
-<li><a href="blog/development-notes-01-03-20.html">Development Notes: January 3st 2020</a></li>
-<li><a href="blog/development-notes-01-02-20.html">Development Notes: January 2st 2020</a></li>
+<li><a href="blog/development-notes-01-04-20.html">Development Notes: January 4th 2020</a></li>
+<li><a href="blog/development-notes-01-03-20.html">Development Notes: January 3rd 2020</a></li>
+<li><a href="blog/development-notes-01-02-20.html">Development Notes: January 2nd 2020</a></li>
 <li><a href="blog/development-notes-01-01-20.html">Development Notes: January 1st 2020</a></li>
 <li><a href="blog/development-notes-12-31-19.html">Development Notes: Decemember 31th 2019</a></li>
 <li><a href="blog/development-notes-12-30-19.html">Development Notes: Decemember 30th 2019</a></li>
