--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ SOFTWARE.
 </header>
 <h1 id="blog-entries">Blog Entries</h1>
 <ul>
+<li><a href="blog/bitmap-index-scan.html">What to Think When You See a <code>Bitmap Index Scan</code></a></li>
 <li><a href="blog/the-eventmanager-and-non-blocking-io.html">Non-blocking IO and the EventManager</a></li>
 <li><a href="blog/when-threadwaitread-doesnt.html">When threadWaitRead Doesn’t</a></li>
 <li><a href="blog/development-notes-01-11-20.html">Development Notes: January 11th 2020</a></li>
