--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ SOFTWARE.
 </header>
 <h1 id="blog-entries">Blog Entries</h1>
 <ul>
+<li><a href="blog/motion_control_with_attention_scaling.html">Motion Control With Attention Scaling</a></li>
 <li><a href="blog/diff-loss.html">Videos Should Lose More</a></li>
 <li><a href="blog/neural-networks-are-for-hacking.html">Neural Networks Are For Hacking`</a></li>
 <li><a href="blog/making-nfts-with-plutus.html">Making NFTs with Plutus</a></li>
